fix icon alignment browser inconsistencies
Fixes https://github.com/maithemewp/mai-lists/issues/2

--- a/assets/mai-lists.css
+++ b/assets/mai-lists.css
@@ -28,7 +28,8 @@
 }
 
 .mai-list-icon-wrap {
-	display: block;
+	display: grid;
+	place-items: center;
 	margin-top: var(--icon-margin-top, 0px);
 	text-align: var(--icon-align, center);
 }
